[gd_scene load_steps=10 format=2]

[ext_resource path="res://Beb.gd" type="Script" id=1]
[ext_resource path="res://Texture/Player/bunny2_hurt.png" type="Texture" id=2]
[ext_resource path="res://Texture/Player/bunny2_ready.png" type="Texture" id=3]
[ext_resource path="res://Texture/Player/bunny2_jump.png" type="Texture" id=4]
[ext_resource path="res://Texture/Spawn/spawn.png" type="Texture" id=5]
[ext_resource path="res://Texture/Spawn/spawn2.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 4.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), null, ExtResource( 3 ), null, ExtResource( 2 ), null, ExtResource( 3 ), null, ExtResource( 2 ), null ],
"loop": true,
"name": "death",
"speed": 4.0
}, {
"frames": [ ExtResource( 2 ), null, null, ExtResource( 3 ), null, null, ExtResource( 2 ), null, null, ExtResource( 3 ), null, null ],
"loop": true,
"name": "die",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 51.9799, 62.3876 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "build",
"speed": 5.0
}, {
"frames": [ null ],
"loop": false,
"name": "0",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "build2",
"speed": 5.0
} ]

[node name="Beb" type="KinematicBody2D"]
z_index = 1
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -2.57211, 28.2933 )
shape = SubResource( 2 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( -46.6172, 25.5348 )

[node name="PositionBuild" type="Position2D" parent="."]
position = Vector2( 473.366, 261.038 )

[node name="Spawn" type="AnimatedSprite" parent="PositionBuild"]
position = Vector2( 0, 61 )
scale = Vector2( 0.979614, 1.01385 )
frames = SubResource( 3 )
animation = "0"

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 40.8203, 27.0824 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.5
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
